goakt-scrabble/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scrabble
  labels:
    app.kubernetes.io/name: goakt-scrabble
